# ardent_proto_description

./: CMakeLists.txt  README.md  model.config  package.xml
meshes/: Hexapod_Base_Half.STL
